[DD-38622] - merging cpp-context-progression into main DLRM Changes