@@ -4,9 +4,8 @@ import static java.util.Objects.isNull;
 import static java.util.Objects.nonNull;
 import static java.util.Optional.ofNullable;
 import static org.apache.commons.collections.CollectionUtils.isNotEmpty;
-import static uk.gov.justice.services.core.annotation.Component.EVENT_PROCESSOR;
 import static uk.gov.justice.core.courts.JurisdictionType.MAGISTRATES;
-import static java.util.Arrays.asList;
+import static uk.gov.justice.services.core.annotation.Component.EVENT_PROCESSOR;
 
 import uk.gov.justice.core.courts.Address;
 import uk.gov.justice.core.courts.ApplicationReferredToCourt;
@@ -39,6 +38,7 @@ import uk.gov.justice.services.messaging.JsonEnvelope;
 import uk.gov.moj.cpp.progression.exception.DataValidationException;
 import uk.gov.moj.cpp.progression.exception.MissingRequiredFieldException;
 import uk.gov.moj.cpp.progression.exception.ReferenceDataNotFoundException;
+import uk.gov.moj.cpp.progression.model.HearingListing;
 import uk.gov.moj.cpp.progression.service.ProgressionService;
 import uk.gov.moj.cpp.progression.service.RefDataService;
 
@@ -46,14 +46,13 @@ import java.time.LocalDate;
 import java.time.ZoneId;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
-import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import javax.inject.Inject;
 import javax.json.JsonObject;
@@ -63,7 +62,6 @@ import org.slf4j.LoggerFactory;
 
 @SuppressWarnings({"squid:S1188", "squid:S2259"})
 public class ListCourtHearingTransformer {
-
 
     private static final Logger LOGGER = LoggerFactory.getLogger(ListCourtHearingTransformer.class.getCanonicalName());
 
@@ -84,26 +82,333 @@ public class ListCourtHearingTransformer {
     private static final String POSTCODE_IS_MISSING = "Postcode is missing for";
 
     /**
-     * earliestDate = add 28 days to the notice date earliest lead date = add 14 days to the
-     * referral date Earliest court date is earliest date or earliest lead date, whichever is the
-     * latest
+     * Transform a CourtReferral to ListCourtHearing
+     *
+     * @return ListCourtHearing
      */
-    public static LocalDate calculateEarliestHearingDate(final LocalDate noticeDate, final LocalDate referralDate) {
+    public ListCourtHearing transform(final JsonEnvelope jsonEnvelope,
+                                      final List<ProsecutionCase> prosecutionCases,
+                                      final SjpReferral sjpReferral,
+                                      final List<ReferredListHearingRequest> referredListHearingRequests,
+                                      final UUID hearingId) {
+        LOGGER.info("Preparing send case for listing ");
+        final List<HearingListingNeeds> hearingsList = new ArrayList<>();
+        referredListHearingRequests
+                .forEach(referredListHearingRequest -> {
 
-        final LocalDate earliestDate = noticeDate.plusDays(28);
-        final LocalDate earliestLeadDate = referralDate.plusDays(14);
+                    final List<ProsecutionCase> listOfProsecutionCase = filterProsecutionCases(prosecutionCases, referredListHearingRequest.getListDefendantRequests());
 
-        if (earliestDate.isAfter(earliestLeadDate)) {
-            return earliestDate;
-        }
-        return earliestLeadDate;
+                    final JsonObject jsonObject = referenceDataService
+                            .getHearingType(jsonEnvelope, referredListHearingRequest.getHearingType().getId(), requester)
+                            .orElseThrow(() -> new ReferenceDataNotFoundException("Hearing Type", referredListHearingRequest.getHearingType().getId().toString()));
+                    final HearingType hearingType = HearingType.hearingType()
+                            .withId(referredListHearingRequest.getHearingType().getId())
+                            .withDescription(jsonObject.getString("hearingDescription"))
+                            .build();
+                    final HearingListingNeeds hearings = HearingListingNeeds.hearingListingNeeds()
+                            .withEarliestStartDateTime(calculateEarliestHearingDate(getNoticeDate(sjpReferral), getReferralDate(sjpReferral)).atStartOfDay(ZoneId.systemDefault()))
+                            .withEstimatedMinutes(getRequiredField(referredListHearingRequest.getEstimateMinutes(), "EstimatedMinutes minutes"))
+                            .withEstimatedDuration(referredListHearingRequest.getEstimatedDuration())
+                            .withId(hearingId)
+                            .withJurisdictionType(referredListHearingRequest.getJurisdictionType())
+                            .withProsecutionCases(listOfProsecutionCase)
+                            .withProsecutorDatesToAvoid(referredListHearingRequest.getProsecutorDatesToAvoid())
+                            .withType(hearingType)
+                            .withListingDirections(referredListHearingRequest.getListingDirections())
+                            .withReportingRestrictionReason(referredListHearingRequest.getReportingRestrictionReason())
+                            .withDefendantListingNeeds(getListDefendantRequests(jsonEnvelope, referredListHearingRequest.getListDefendantRequests()))
+                            .withCourtCentre(calculateCourtCentre(sjpReferral, referenceDataService, jsonEnvelope, listOfProsecutionCase, prosecutionCases, requester))
+                            .build();
+                    hearingsList.add(hearings);
+                });
+
+        return ListCourtHearing.listCourtHearing().withHearings(hearingsList).build();
     }
+
+    public ListCourtHearing transformSjpReferralNextHearing(final JsonEnvelope jsonEnvelope,
+                                      final List<ProsecutionCase> prosecutionCases,
+                                      final UUID hearingId, final NextHearing nextHearing, final List<ReferredListHearingRequest> referredListHearingRequests) {
+
+        LOGGER.debug("Transforming SJP reference with nextHearing  to ListCourtHearing");
+
+        final HearingListingNeeds hearings = HearingListingNeeds.hearingListingNeeds()
+                .withId(hearingId)
+                .withProsecutionCases(prosecutionCases)
+                .withCourtCentre(progressionService.transformCourtCentre(nextHearing.getCourtCentre(), jsonEnvelope))
+                .withBookedSlots(nextHearing.getHmiSlots())
+                .withListedStartDateTime(nextHearing.getListedStartDateTime())
+                .withEstimatedMinutes(nextHearing.getEstimatedMinutes())
+                .withType(nextHearing.getType())
+                .withJurisdictionType(MAGISTRATES)
+                .withDefendantListingNeeds(getListDefendantRequests(jsonEnvelope, referredListHearingRequests.stream().flatMap(r->r.getListDefendantRequests().stream()).toList()))
+                .build();
+
+        return ListCourtHearing.listCourtHearing().withHearings(List.of(hearings)).build();
+    }
+
+    @SuppressWarnings({"pmd:NullAssignment"})
+    public ListCourtHearing transform(final JsonEnvelope jsonEnvelope, final List<ProsecutionCase> prosecutionCases,
+                                      final List<ListHearingRequest> listHearingRequests, final UUID hearingId, final Boolean isGroupProceedings) {
+        LOGGER.info("Transforming SPI cases to ListCourtHearing ");
+
+        final List<HearingListingNeeds> hearingsList = buildHearingListingNeeds(
+                jsonEnvelope, prosecutionCases, listHearingRequests, hearingId, isGroupProceedings);
+
+        return ListCourtHearing.listCourtHearing().withHearings(hearingsList).build();
+    }
+
+    public ListCourtHearing transform(final JsonEnvelope jsonEnvelope, final List<ProsecutionCase> prosecutionCases,
+                                      final List<HearingListing> hearingListingList, final Boolean isGroupProceedings) {
+
+        LOGGER.info("Transforming SPI cases to ListCourtHearing - {} ", hearingListingList);
+
+        final List<HearingListingNeeds> hearingsList = hearingListingList.stream()
+                .map(hearingListing -> buildHearingListingNeeds(
+                        jsonEnvelope,
+                        prosecutionCases,
+                        List.of(hearingListing.listHearingRequestList().stream().findFirst().orElseThrow()),
+                        hearingListing.hearingId(),
+                        isGroupProceedings))
+                .flatMap(Collection::stream)
+                .toList();
+
+        LOGGER.info("hearingListingList - {} ", hearingListingList);
+
+        return ListCourtHearing.listCourtHearing().withHearings(hearingsList).build();
+    }
+
+    public ListCourtHearing transform(final JsonEnvelope jsonEnvelope, final List<ProsecutionCase> prosecutionCases,
+                                      CourtHearingRequest courtHearingRequest, final UUID hearingId) {
+        LOGGER.info("Transforming courtHearingRequest cases to ListCourtHearing");
+        final List<HearingListingNeeds> hearingsList = new ArrayList<>();
+
+        final List<ProsecutionCase> listOfProsecutionCase = filterProsecutionCases(prosecutionCases, courtHearingRequest.getListDefendantRequests());
+        final ZonedDateTime expectedListingStartDateTime = calculateExpectedStartDate(courtHearingRequest);
+        final List<ListDefendantRequest> listDefendantRequests = updateListDefendantRequestsForYouth(expectedListingStartDateTime, listOfProsecutionCase, courtHearingRequest.getListDefendantRequests());
+        final HearingListingNeeds hearing = HearingListingNeeds.hearingListingNeeds()
+                .withEarliestStartDateTime(courtHearingRequest.getEarliestStartDateTime())
+                .withListedStartDateTime(courtHearingRequest.getListedStartDateTime())
+                .withEstimatedMinutes(courtHearingRequest.getEstimatedMinutes())
+                .withBookedSlots(courtHearingRequest.getBookedSlots())
+                .withId(hearingId)
+                .withJurisdictionType(courtHearingRequest.getJurisdictionType())
+                .withProsecutionCases(listOfProsecutionCase)
+                .withType(courtHearingRequest.getHearingType())
+                .withListingDirections(courtHearingRequest.getListingDirections())
+                .withCourtCentre(courtHearingRequest.getCourtCentre())
+                .withDefendantListingNeeds(getListDefendantRequests(jsonEnvelope, listDefendantRequests))
+                .withPriority(courtHearingRequest.getPriority())
+                .withBookingType(courtHearingRequest.getBookingType())
+                .withSpecialRequirements(courtHearingRequest.getSpecialRequirements())
+                .withWeekCommencingDate(courtHearingRequest.getWeekCommencingDate())
+                .withNonDefaultDays(courtHearingRequest.getNonDefaultDays())
+                .build();
+        hearingsList.add(hearing);
+
+        return ListCourtHearing.listCourtHearing().withHearings(hearingsList).build();
+    }
+
+    public ListCourtHearing transform(final ApplicationReferredToCourt applicationReferredToCourt) {
+
+        LOGGER.info("Preparing application for list court hearing");
+
+        final List<HearingListingNeeds> hearingsList = new ArrayList<>();
+        final HearingListingNeeds hearingRequest = applicationReferredToCourt.getHearingRequest();
+
+        final HearingListingNeeds.Builder hearingsBuilder = HearingListingNeeds.hearingListingNeeds()
+                .withId(hearingRequest.getId())
+                .withCourtCentre(hearingRequest.getCourtCentre())
+                .withJudiciary(hearingRequest.getJudiciary())
+                .withProsecutionCases(hearingRequest.getProsecutionCases())
+                .withType(hearingRequest.getType())
+                .withJurisdictionType(hearingRequest.getJurisdictionType())
+                .withEarliestStartDateTime(hearingRequest.getEarliestStartDateTime())
+                .withEstimatedMinutes(hearingRequest.getEstimatedMinutes())
+                .withEstimatedDuration(hearingRequest.getEstimatedDuration())
+                .withReportingRestrictionReason(hearingRequest.getReportingRestrictionReason())
+                .withListingDirections(hearingRequest.getListingDirections())
+                .withDefendantListingNeeds(hearingRequest.getDefendantListingNeeds())
+                .withBookingType(hearingRequest.getBookingType())
+                .withPriority(hearingRequest.getPriority())
+                .withSpecialRequirements(hearingRequest.getSpecialRequirements())
+                .withBookedSlots(hearingRequest.getBookedSlots());
+
+        final List<CourtApplicationPartyListingNeeds> courtApplicationPartyListingNeedsList = hearingRequest.getCourtApplicationPartyListingNeeds();
+
+        if (isNotEmpty(courtApplicationPartyListingNeedsList)) {
+            hearingsBuilder.withCourtApplicationPartyListingNeeds(courtApplicationPartyListingNeedsList);
+        }
+
+        final List<CourtApplication> courtApplications = hearingRequest.getCourtApplications();
+
+        if (isNotEmpty(courtApplications)) {
+            hearingsBuilder.withCourtApplications(hearingRequest.getCourtApplications());
+        }
+
+        hearingsList.add(hearingsBuilder.build());
+
+        return ListCourtHearing.listCourtHearing().withHearings(hearingsList).build();
+    }
+
+    protected ZonedDateTime calculateExpectedStartDate(final CourtHearingRequest courtHearingRequest) {
+        ZonedDateTime expectedListingStartDateTime = nonNull(courtHearingRequest.getListedStartDateTime()) ? courtHearingRequest.getListedStartDateTime() : courtHearingRequest.getEarliestStartDateTime();
+        if (expectedListingStartDateTime == null && courtHearingRequest.getWeekCommencingDate() != null) {
+            expectedListingStartDateTime = courtHearingRequest.getWeekCommencingDate().getStartDate().atStartOfDay(ZoneOffset.UTC);
+        }
+        return expectedListingStartDateTime;
+    }
+
+    protected ZonedDateTime calculateExpectedStartDate(final ListHearingRequest listHearingRequest) {
+        ZonedDateTime expectedListingStartDateTime = nonNull(listHearingRequest.getListedStartDateTime()) ? listHearingRequest.getListedStartDateTime() : listHearingRequest.getEarliestStartDateTime();
+        if (expectedListingStartDateTime == null && listHearingRequest.getWeekCommencingDate() != null) {
+            expectedListingStartDateTime = listHearingRequest.getWeekCommencingDate().getStartDate().atStartOfDay(ZoneOffset.UTC);
+        }
+        return expectedListingStartDateTime;
+    }
+
+    private List<HearingListingNeeds> buildHearingListingNeeds(final JsonEnvelope jsonEnvelope, final List<ProsecutionCase> prosecutionCases, final List<ListHearingRequest> listHearingRequests, final UUID hearingId, final Boolean isGroupProceedings) {
+        return listHearingRequests.stream()
+                .map(listHearingRequest -> buildHearingListingNeeds(
+                        jsonEnvelope, prosecutionCases, hearingId, isGroupProceedings, listHearingRequest))
+                .toList();
+    }
+
+    private HearingListingNeeds buildHearingListingNeeds(final JsonEnvelope jsonEnvelope, final List<ProsecutionCase> prosecutionCases, final UUID hearingId, final Boolean isGroupProceedings, final ListHearingRequest listHearingRequest) {
+        final List<ProsecutionCase> listOfProsecutionCase = filterProsecutionCasesFromSpi(prosecutionCases, listHearingRequest.getListDefendantRequests());
+        final ZonedDateTime expectedListingStartDateTime = calculateExpectedStartDate(listHearingRequest);
+        final List<ListDefendantRequest> listDefendantRequests = updateListDefendantRequestsForYouth(expectedListingStartDateTime, listOfProsecutionCase, listHearingRequest.getListDefendantRequests());
+        return HearingListingNeeds.hearingListingNeeds()
+                .withEarliestStartDateTime(listHearingRequest.getEarliestStartDateTime())
+                .withListedStartDateTime(listHearingRequest.getListedStartDateTime())
+                .withEstimatedMinutes(listHearingRequest.getEstimateMinutes())
+                .withEstimatedDuration(listHearingRequest.getEstimatedDuration())
+                .withId(hearingId)
+                .withJurisdictionType(listHearingRequest.getJurisdictionType())
+                .withProsecutionCases(listOfProsecutionCase)
+                .withProsecutorDatesToAvoid(listHearingRequest.getProsecutorDatesToAvoid())
+                .withType(listHearingRequest.getHearingType())
+                .withListingDirections(listHearingRequest.getListingDirections())
+                .withReportingRestrictionReason(listHearingRequest.getReportingRestrictionReason())
+                .withCourtCentre(listHearingRequest.getCourtCentre())
+                .withDefendantListingNeeds(getListDefendantRequests(jsonEnvelope, listDefendantRequests))
+                .withIsGroupProceedings(isGroupProceedings)
+                .withNumberOfGroupCases(isNotEmpty(prosecutionCases) ? prosecutionCases.size() : null)
+                .withWeekCommencingDate(listHearingRequest.getWeekCommencingDate())
+                .build();
+    }
+
+    private List<ListDefendantRequest> updateListDefendantRequestsForYouth(final ZonedDateTime expectedListingStartDateTime, final List<ProsecutionCase> listOfProsecutionCase, final List<ListDefendantRequest> listDefendantRequests) {
+
+        return listDefendantRequests.stream().map(listDefendantRequest ->
+                ListDefendantRequest.listDefendantRequest()
+                        .withDatesToAvoid(listDefendantRequest.getDatesToAvoid())
+                        // SPI cases will not have referral reason
+                        .withDefendantId(listDefendantRequest.getDefendantId())
+                        .withHearingLanguageNeeds(listDefendantRequest.getHearingLanguageNeeds())
+                        .withProsecutionCaseId(listDefendantRequest.getProsecutionCaseId())
+                        .withReferralReason(listDefendantRequest.getReferralReason())
+                        .withDefendantOffences(listDefendantRequest.getDefendantOffences())
+                        .withSummonsRequired(isDefendantYouth(expectedListingStartDateTime, listDefendantRequest.getDefendantId(), listOfProsecutionCase) ? SummonsType.YOUTH : listDefendantRequest.getSummonsRequired())
+                        .build()
+        ).toList();
+    }
+
+    private boolean isDefendantYouth(final ZonedDateTime expectedListingStartDateTime, final UUID defendantId, final List<ProsecutionCase> listOfProsecutionCase) {
+        boolean isYouth = false;
+        final Optional<Defendant> defendant = listOfProsecutionCase.stream()
+                .flatMap(pc -> pc.getDefendants().stream())
+                .filter(d -> d.getId().equals(defendantId))
+                .findFirst();
+
+        if (defendant.isPresent()) {
+            final Optional<LocalDate> birthDate = getDateOfBirth(defendant.get());
+            if (birthDate.isPresent() && calculateIsYouth(birthDate.get(), expectedListingStartDateTime)) {
+                isYouth = true;
+            }
+        }
+
+        return isYouth;
+    }
+
+    private Optional<LocalDate> getDateOfBirth(final uk.gov.justice.core.courts.Defendant defendant) {
+        return ofNullable(defendant)
+                .map(uk.gov.justice.core.courts.Defendant::getPersonDefendant)
+                .map(PersonDefendant::getPersonDetails)
+                .map(Person::getDateOfBirth);
+    }
+
+    private boolean calculateIsYouth(final LocalDate birthDate, final ZonedDateTime earliestHearingDate) {
+        final ZonedDateTime dateOfBirth = ZonedDateTime.of(birthDate.atTime(0, 0), ZoneId.systemDefault());
+        return earliestHearingDate.minusYears(18).isBefore(dateOfBirth);
+    }
+
+    private String getReferralReasonDescription(final JsonEnvelope jsonEnvelope, final ReferralReason referralReason) {
+        if(referralReason == null){
+            return null;
+        }
+        final UUID referralId = referralReason.getId();
+        final JsonObject jsonObject = referenceDataService.getReferralReasonByReferralReasonId(jsonEnvelope, referralId, requester)
+                .orElseThrow(() -> new ReferenceDataNotFoundException("ReferralReason", referralId.toString()));
+        return jsonObject.getString("reason", null);
+    }
+
+    /**
+     * Take list of ListDefendantRequest (progresssion) Returns list of ListDefendantRequests
+     * (listing)
+     */
+    private List<DefendantListingNeeds> getListDefendantRequests(final JsonEnvelope jsonEnvelope, final List<ListDefendantRequest> collectionOfListDefendantRequest) {
+        return collectionOfListDefendantRequest.stream().map(listDefendantRequest ->
+                DefendantListingNeeds.defendantListingNeeds()
+                        .withDatesToAvoid(listDefendantRequest.getDatesToAvoid())
+                        // SPI cases will not have referral reason
+                        .withDefendantId(isNull(listDefendantRequest.getDefendantId()) ?
+                                listDefendantRequest.getReferralReason().getDefendantId() : listDefendantRequest.getDefendantId())
+                        .withHearingLanguageNeeds(listDefendantRequest.getHearingLanguageNeeds())
+                        .withProsecutionCaseId(listDefendantRequest.getProsecutionCaseId())
+                        .withListingReason(getReferralReasonDescription(jsonEnvelope, listDefendantRequest.getReferralReason()))
+                        .withIsYouth(listDefendantRequest.getSummonsRequired() != null && SummonsType.YOUTH.equals(listDefendantRequest.getSummonsRequired()))
+                        .build()
+        ).toList();
+    }
+
+    private CourtCentre calculateCourtCentre(final SjpReferral sjpReferral,
+                                             final RefDataService referenceDataService,
+                                             final JsonEnvelope jsonEnvelope,
+                                             final List<ProsecutionCase> listOfProsecutionCase,
+                                             final List<ProsecutionCase> prosecutionCases,
+                                             final Requester requester) {
+        try {
+            final Optional<JsonObject> responseOuCode =
+                    referenceDataService.getCourtsByPostCodeAndProsecutingAuthority(
+                            jsonEnvelope,
+                            getDefendantPostcode(listOfProsecutionCase),
+                            getProsecutionAuthorityCode(prosecutionCases),
+                            requester);
+
+            final String ouCode;
+            if (responseOuCode.isPresent() && !responseOuCode.get().getJsonArray("courts").isEmpty()) {
+                ouCode = ((JsonObject)
+                        responseOuCode.get().getJsonArray("courts").get(0)).getString("oucode");
+            } else {
+                ouCode = sjpReferral.getReferringJudicialDecision().getCourtHouseCode();
+            }
+            return referenceDataService.getCourtCentre(ouCode, jsonEnvelope, requester);
+
+        } catch (MissingRequiredFieldException e) {
+            if (e.getMessage().contains(POSTCODE_IS_MISSING)) {
+                return referenceDataService.getCourtCentre(sjpReferral.getReferringJudicialDecision().getCourtHouseCode(), jsonEnvelope, requester);
+            } else {
+                throw e;
+            }
+        }
+    }
+
 
     @SuppressWarnings("squid:S1188")
     private static List<ProsecutionCase> filterProsecutionCases(final List<ProsecutionCase> prosecutionCases, final
     List<ListDefendantRequest> listDefendantRequests) {
         final Map<UUID, List<Defendant>> mapOfProsecutionCaseIdWithDefendants = new HashMap<>();
-        listDefendantRequests.stream().forEach(listDefendantRequest -> {
+        listDefendantRequests.forEach(listDefendantRequest -> {
 
             final ProsecutionCase matchedProsecutionCase = prosecutionCases.stream()
                     .filter(prosecutionCase -> prosecutionCase.getId()
@@ -114,7 +419,7 @@ public class ListCourtHearingTransformer {
                             .equals(defendant.getId())).findFirst().orElseThrow(() -> new DataValidationException("Matching defendant missing in referral"));
             final List<Offence> matchedDefendantOffence = matchedDefendant.getOffences().stream()
                     .filter(offence -> listDefendantRequest.getDefendantOffences()
-                            .contains(offence.getId())).collect(Collectors.toList());
+                            .contains(offence.getId())).toList();
 
             final Defendant defendant = getCopyOfDefendant(matchedDefendant, matchedDefendantOffence);
 
@@ -129,7 +434,7 @@ public class ListCourtHearingTransformer {
         });
 
         final List<ProsecutionCase> listOfProsecutionCase = new ArrayList<>();
-        mapOfProsecutionCaseIdWithDefendants.keySet().stream().forEach(prosecutionCaseId -> {
+        mapOfProsecutionCaseIdWithDefendants.keySet().forEach(prosecutionCaseId -> {
             final ProsecutionCase matchedProsecutionCase = prosecutionCases.stream()
                     .filter(prosecutionCase -> prosecutionCase.getId()
                             .equals(prosecutionCaseId)).findFirst().orElseThrow(() -> new DataValidationException("Matching caseId missing in referral"));
@@ -184,7 +489,7 @@ public class ListCourtHearingTransformer {
     private static List<ProsecutionCase> filterProsecutionCasesFromSpi(final List<ProsecutionCase> prosecutionCases, final
     List<ListDefendantRequest> listDefendantRequests) {
         final Map<UUID, List<Defendant>> mapOfProsecutionCaseIdWithDefendants = new HashMap<>();
-        listDefendantRequests.stream().forEach(listDefendantRequest -> {
+        listDefendantRequests.forEach(listDefendantRequest -> {
 
             final ProsecutionCase matchedProsecutionCase = prosecutionCases.stream()
                     .filter(prosecutionCase -> prosecutionCase.getId()
@@ -196,7 +501,8 @@ public class ListCourtHearingTransformer {
 
             final List<Offence> matchedDefendantOffence = matchedDefendant.getOffences().stream()
                     .filter(offence -> listDefendantRequest.getDefendantOffences()
-                            .contains(offence.getId())).collect(Collectors.toList());
+                            .contains(offence.getId()))
+                    .toList();
 
             final Defendant defendant = getCopyOfDefendant(matchedDefendant, matchedDefendantOffence);
 
@@ -211,7 +517,7 @@ public class ListCourtHearingTransformer {
         });
 
         final List<ProsecutionCase> listOfProsecutionCase = new ArrayList<>();
-        mapOfProsecutionCaseIdWithDefendants.keySet().stream().forEach(prosecutionCaseId -> {
+        mapOfProsecutionCaseIdWithDefendants.keySet().forEach(prosecutionCaseId -> {
             final ProsecutionCase matchedProsecutionCase = prosecutionCases.stream()
                     .filter(prosecutionCase -> prosecutionCase.getId()
                             .equals(prosecutionCaseId)).findFirst().orElseThrow(() -> new DataValidationException("Matching caseId missing in SPI initiate court proceedings"));
@@ -277,288 +583,18 @@ public class ListCourtHearingTransformer {
     }
 
     /**
-     * Transform a CourtReferral to ListCourtHearing
-     *
-     * @return ListCourtHearing
+     * earliestDate = add 28 days to the notice date earliest lead date = add 14 days to the
+     * referral date Earliest court date is earliest date or earliest lead date, whichever is the
+     * latest
      */
-    public ListCourtHearing transform(final JsonEnvelope jsonEnvelope,
-                                      final List<ProsecutionCase> prosecutionCases,
-                                      final SjpReferral sjpReferral,
-                                      final List<ReferredListHearingRequest> referredListHearingRequests,
-                                      final UUID hearingId) {
-        LOGGER.info("Preparing send case for listing ");
-        final List<HearingListingNeeds> hearingsList = new ArrayList<>();
-        referredListHearingRequests.stream()
-                .forEach(referredListHearingRequest -> {
+    private LocalDate calculateEarliestHearingDate(final LocalDate noticeDate, final LocalDate referralDate) {
 
-                    final List<ProsecutionCase> listOfProsecutionCase = filterProsecutionCases(prosecutionCases, referredListHearingRequest.getListDefendantRequests());
+        final LocalDate earliestDate = noticeDate.plusDays(28);
+        final LocalDate earliestLeadDate = referralDate.plusDays(14);
 
-                    final JsonObject jsonObject = referenceDataService
-                            .getHearingType(jsonEnvelope, referredListHearingRequest.getHearingType().getId(), requester)
-                            .orElseThrow(() -> new ReferenceDataNotFoundException("Hearing Type", referredListHearingRequest.getHearingType().getId().toString()));
-                    final HearingType hearingType = HearingType.hearingType()
-                            .withId(referredListHearingRequest.getHearingType().getId())
-                            .withDescription(jsonObject.getString("hearingDescription"))
-                            .build();
-                    final HearingListingNeeds hearings = HearingListingNeeds.hearingListingNeeds()
-                            .withEarliestStartDateTime(calculateEarliestHearingDate(getNoticeDate(sjpReferral), getReferralDate(sjpReferral)).atStartOfDay(ZoneId.systemDefault()))
-                            .withEstimatedMinutes(getRequiredField(referredListHearingRequest.getEstimateMinutes(), "EstimatedMinutes minutes"))
-                            .withEstimatedDuration(referredListHearingRequest.getEstimatedDuration())
-                            .withId(hearingId)
-                            .withJurisdictionType(referredListHearingRequest.getJurisdictionType())
-                            .withProsecutionCases(listOfProsecutionCase)
-                            .withProsecutorDatesToAvoid(referredListHearingRequest.getProsecutorDatesToAvoid())
-                            .withType(hearingType)
-                            .withListingDirections(referredListHearingRequest.getListingDirections())
-                            .withReportingRestrictionReason(referredListHearingRequest.getReportingRestrictionReason())
-                            .withDefendantListingNeeds(getListDefendantRequests(jsonEnvelope, referredListHearingRequest.getListDefendantRequests()))
-                            .withCourtCentre(calculateCourtCentre(sjpReferral, referenceDataService, jsonEnvelope, listOfProsecutionCase, prosecutionCases, requester))
-                            .build();
-                    hearingsList.add(hearings);
-                });
-
-        return ListCourtHearing.listCourtHearing().withHearings(hearingsList).build();
-    }
-
-    public ListCourtHearing transformSjpReferralNextHearing(final JsonEnvelope jsonEnvelope,
-                                      final List<ProsecutionCase> prosecutionCases,
-                                      final UUID hearingId, final NextHearing nextHearing, final List<ReferredListHearingRequest> referredListHearingRequests) {
-
-        LOGGER.debug("Transforming SJP reference with nextHearing  to ListCourtHearing");
-
-        final HearingListingNeeds hearings = HearingListingNeeds.hearingListingNeeds()
-                .withId(hearingId)
-                .withProsecutionCases(prosecutionCases)
-                .withCourtCentre(progressionService.transformCourtCentre(nextHearing.getCourtCentre(), jsonEnvelope))
-                .withBookedSlots(nextHearing.getHmiSlots())
-                .withListedStartDateTime(nextHearing.getListedStartDateTime())
-                .withEstimatedMinutes(nextHearing.getEstimatedMinutes())
-                .withType(nextHearing.getType())
-                .withJurisdictionType(MAGISTRATES)
-                .withDefendantListingNeeds(getListDefendantRequests(jsonEnvelope, referredListHearingRequests.stream().flatMap(r->r.getListDefendantRequests().stream()).collect(Collectors.toList())))
-                .build();
-
-        return ListCourtHearing.listCourtHearing().withHearings(asList(hearings)).build();
-    }
-
-    @SuppressWarnings({"pmd:NullAssignment"})
-    public ListCourtHearing transform(final JsonEnvelope jsonEnvelope, final List<ProsecutionCase> prosecutionCases,
-                                      final List<ListHearingRequest> listHearingRequests, final UUID hearingId, final Boolean isGroupProceedings) {
-        LOGGER.info("Transforming SPI cases to ListCourtHearing");
-        final List<HearingListingNeeds> hearingsList = new ArrayList<>();
-
-        listHearingRequests.stream().forEach(listHearingRequest -> {
-            final List<ProsecutionCase> listOfProsecutionCase = filterProsecutionCasesFromSpi(prosecutionCases, listHearingRequest.getListDefendantRequests());
-            final ZonedDateTime expectedListingStartDateTime = nonNull(listHearingRequest.getListedStartDateTime()) ? listHearingRequest.getListedStartDateTime() : listHearingRequest.getEarliestStartDateTime();
-            final List<ListDefendantRequest> listDefendantRequests = updateListDefendantRequestsForYouth(expectedListingStartDateTime, listOfProsecutionCase, listHearingRequest.getListDefendantRequests());
-            final HearingListingNeeds hearing = HearingListingNeeds.hearingListingNeeds()
-                    .withEarliestStartDateTime(listHearingRequest.getEarliestStartDateTime())
-                    .withListedStartDateTime(listHearingRequest.getListedStartDateTime())
-                    .withEstimatedMinutes(listHearingRequest.getEstimateMinutes())
-                    .withEstimatedDuration(listHearingRequest.getEstimatedDuration())
-                    .withId(hearingId)
-                    .withJurisdictionType(listHearingRequest.getJurisdictionType())
-                    .withProsecutionCases(listOfProsecutionCase)
-                    .withProsecutorDatesToAvoid(listHearingRequest.getProsecutorDatesToAvoid())
-                    .withType(listHearingRequest.getHearingType())
-                    .withListingDirections(listHearingRequest.getListingDirections())
-                    .withReportingRestrictionReason(listHearingRequest.getReportingRestrictionReason())
-                    .withCourtCentre(listHearingRequest.getCourtCentre())
-                    .withDefendantListingNeeds(getListDefendantRequests(jsonEnvelope, listDefendantRequests))
-                    .withIsGroupProceedings(isGroupProceedings)
-                    .withNumberOfGroupCases(isNotEmpty(prosecutionCases) ? prosecutionCases.size() : null)
-                    .build();
-            hearingsList.add(hearing);
-        });
-        return ListCourtHearing.listCourtHearing().withHearings(hearingsList).build();
-    }
-
-    public ListCourtHearing transform(final JsonEnvelope jsonEnvelope, final List<ProsecutionCase> prosecutionCases,
-                                      CourtHearingRequest courtHearingRequest, final UUID hearingId) {
-        LOGGER.info("Transforming courtHearingRequest cases to ListCourtHearing");
-        final List<HearingListingNeeds> hearingsList = new ArrayList<>();
-
-        final List<ProsecutionCase> listOfProsecutionCase = filterProsecutionCases(prosecutionCases, courtHearingRequest.getListDefendantRequests());
-        final ZonedDateTime expectedListingStartDateTime = calculateExpectedStartDate(courtHearingRequest);
-        final List<ListDefendantRequest> listDefendantRequests = updateListDefendantRequestsForYouth(expectedListingStartDateTime, listOfProsecutionCase, courtHearingRequest.getListDefendantRequests());
-        final HearingListingNeeds hearing = HearingListingNeeds.hearingListingNeeds()
-                .withEarliestStartDateTime(courtHearingRequest.getEarliestStartDateTime())
-                .withListedStartDateTime(courtHearingRequest.getListedStartDateTime())
-                .withEstimatedMinutes(courtHearingRequest.getEstimatedMinutes())
-                .withBookedSlots(courtHearingRequest.getBookedSlots())
-                .withId(hearingId)
-                .withJurisdictionType(courtHearingRequest.getJurisdictionType())
-                .withProsecutionCases(listOfProsecutionCase)
-                .withType(courtHearingRequest.getHearingType())
-                .withListingDirections(courtHearingRequest.getListingDirections())
-                .withCourtCentre(courtHearingRequest.getCourtCentre())
-                .withDefendantListingNeeds(getListDefendantRequests(jsonEnvelope, listDefendantRequests))
-                .withPriority(courtHearingRequest.getPriority())
-                .withBookingType(courtHearingRequest.getBookingType())
-                .withSpecialRequirements(courtHearingRequest.getSpecialRequirements())
-                .withWeekCommencingDate(courtHearingRequest.getWeekCommencingDate())
-                .withNonDefaultDays(courtHearingRequest.getNonDefaultDays())
-                .build();
-        hearingsList.add(hearing);
-
-        return ListCourtHearing.listCourtHearing().withHearings(hearingsList).build();
-    }
-
-    protected ZonedDateTime calculateExpectedStartDate(final CourtHearingRequest courtHearingRequest) {
-        ZonedDateTime expectedListingStartDateTime = nonNull(courtHearingRequest.getListedStartDateTime()) ? courtHearingRequest.getListedStartDateTime() : courtHearingRequest.getEarliestStartDateTime();
-        if (expectedListingStartDateTime == null && courtHearingRequest.getWeekCommencingDate() != null) {
-            expectedListingStartDateTime = courtHearingRequest.getWeekCommencingDate().getStartDate().atStartOfDay(ZoneOffset.UTC);
+        if (earliestDate.isAfter(earliestLeadDate)) {
+            return earliestDate;
         }
-        return expectedListingStartDateTime;
+        return earliestLeadDate;
     }
-
-    private List<ListDefendantRequest> updateListDefendantRequestsForYouth(final ZonedDateTime expectedListingStartDateTime, final List<ProsecutionCase> listOfProsecutionCase, final List<ListDefendantRequest> listDefendantRequests) {
-
-        return listDefendantRequests.stream().map(listDefendantRequest ->
-                ListDefendantRequest.listDefendantRequest()
-                        .withDatesToAvoid(listDefendantRequest.getDatesToAvoid())
-                        // SPI cases will not have referral reason
-                        .withDefendantId(listDefendantRequest.getDefendantId())
-                        .withHearingLanguageNeeds(listDefendantRequest.getHearingLanguageNeeds())
-                        .withProsecutionCaseId(listDefendantRequest.getProsecutionCaseId())
-                        .withReferralReason(listDefendantRequest.getReferralReason())
-                        .withDefendantOffences(listDefendantRequest.getDefendantOffences())
-                        .withSummonsRequired(isDefendantYouth(expectedListingStartDateTime, listDefendantRequest.getDefendantId(), listOfProsecutionCase) ? SummonsType.YOUTH : listDefendantRequest.getSummonsRequired())
-                        .build()
-        ).collect(Collectors.toList());
-    }
-
-    private boolean isDefendantYouth(final ZonedDateTime expectedListingStartDateTime, final UUID defendantId, final List<ProsecutionCase> listOfProsecutionCase) {
-        boolean isYouth = false;
-        final Optional<Defendant> defendant = listOfProsecutionCase.stream()
-                .flatMap(pc -> pc.getDefendants().stream())
-                .filter(d -> d.getId().equals(defendantId))
-                .findFirst();
-
-        if (defendant.isPresent()) {
-            final Optional<LocalDate> birthDate = getDateOfBirth(defendant.get());
-            if (birthDate.isPresent() && calculateIsYouth(birthDate.get(), expectedListingStartDateTime)) {
-                isYouth = true;
-            }
-        }
-
-        return isYouth;
-    }
-
-    private Optional<LocalDate> getDateOfBirth(final uk.gov.justice.core.courts.Defendant defendant) {
-        return ofNullable(defendant)
-                .map(uk.gov.justice.core.courts.Defendant::getPersonDefendant)
-                .map(PersonDefendant::getPersonDetails)
-                .map(Person::getDateOfBirth);
-    }
-
-    private boolean calculateIsYouth(final LocalDate birthDate, final ZonedDateTime earliestHearingDate) {
-        final ZonedDateTime dateOfBirth = ZonedDateTime.of(birthDate.atTime(0, 0), ZoneId.systemDefault());
-        return earliestHearingDate.minus(18, ChronoUnit.YEARS).isBefore(dateOfBirth);
-    }
-
-    public ListCourtHearing transform(final ApplicationReferredToCourt applicationReferredToCourt) {
-
-        LOGGER.info("Preparing application for list court hearing");
-
-        final List<HearingListingNeeds> hearingsList = new ArrayList<>();
-        final HearingListingNeeds hearingRequest = applicationReferredToCourt.getHearingRequest();
-
-        final HearingListingNeeds.Builder hearingsBuilder = HearingListingNeeds.hearingListingNeeds()
-                .withId(hearingRequest.getId())
-                .withCourtCentre(hearingRequest.getCourtCentre())
-                .withJudiciary(hearingRequest.getJudiciary())
-                .withProsecutionCases(hearingRequest.getProsecutionCases())
-                .withType(hearingRequest.getType())
-                .withJurisdictionType(hearingRequest.getJurisdictionType())
-                .withEarliestStartDateTime(hearingRequest.getEarliestStartDateTime())
-                .withEstimatedMinutes(hearingRequest.getEstimatedMinutes())
-                .withEstimatedDuration(hearingRequest.getEstimatedDuration())
-                .withReportingRestrictionReason(hearingRequest.getReportingRestrictionReason())
-                .withListingDirections(hearingRequest.getListingDirections())
-                .withDefendantListingNeeds(hearingRequest.getDefendantListingNeeds())
-                .withBookingType(hearingRequest.getBookingType())
-                .withPriority(hearingRequest.getPriority())
-                .withSpecialRequirements(hearingRequest.getSpecialRequirements())
-                .withBookedSlots(hearingRequest.getBookedSlots());
-
-        final List<CourtApplicationPartyListingNeeds> courtApplicationPartyListingNeedsList = hearingRequest.getCourtApplicationPartyListingNeeds();
-
-        if (isNotEmpty(courtApplicationPartyListingNeedsList)) {
-            hearingsBuilder.withCourtApplicationPartyListingNeeds(courtApplicationPartyListingNeedsList);
-        }
-
-        final List<CourtApplication> courtApplications = hearingRequest.getCourtApplications();
-
-        if (isNotEmpty(courtApplications)) {
-            hearingsBuilder.withCourtApplications(hearingRequest.getCourtApplications());
-        }
-
-        hearingsList.add(hearingsBuilder.build());
-
-        return ListCourtHearing.listCourtHearing().withHearings(hearingsList).build();
-    }
-
-    private String getReferralReasonDescription(final JsonEnvelope jsonEnvelope, final ReferralReason referralReason) {
-        if(referralReason == null){
-            return null;
-        }
-        final UUID referralId = referralReason.getId();
-        final JsonObject jsonObject = referenceDataService.getReferralReasonByReferralReasonId(jsonEnvelope, referralId, requester)
-                .orElseThrow(() -> new ReferenceDataNotFoundException("ReferralReason", referralId.toString()));
-        return jsonObject.getString("reason", null);
-    }
-
-    /**
-     * Take list of ListDefendantRequest (progresssion) Returns list of ListDefendantRequests
-     * (listing)
-     */
-    private List<DefendantListingNeeds> getListDefendantRequests(final JsonEnvelope jsonEnvelope, final List<ListDefendantRequest> collectionOfListDefendantRequest) {
-        return collectionOfListDefendantRequest.stream().map(listDefendantRequest ->
-                DefendantListingNeeds.defendantListingNeeds()
-                        .withDatesToAvoid(listDefendantRequest.getDatesToAvoid())
-                        // SPI cases will not have referral reason
-                        .withDefendantId(isNull(listDefendantRequest.getDefendantId()) ?
-                                listDefendantRequest.getReferralReason().getDefendantId() : listDefendantRequest.getDefendantId())
-                        .withHearingLanguageNeeds(listDefendantRequest.getHearingLanguageNeeds())
-                        .withProsecutionCaseId(listDefendantRequest.getProsecutionCaseId())
-                        .withListingReason(getReferralReasonDescription(jsonEnvelope, listDefendantRequest.getReferralReason()))
-                        .withIsYouth(listDefendantRequest.getSummonsRequired() != null && SummonsType.YOUTH.equals(listDefendantRequest.getSummonsRequired()))
-                        .build()
-        ).collect(Collectors.toList());
-    }
-
-    private CourtCentre calculateCourtCentre(final SjpReferral sjpReferral,
-                                             final RefDataService referenceDataService,
-                                             final JsonEnvelope jsonEnvelope,
-                                             final List<ProsecutionCase> listOfProsecutionCase,
-                                             final List<ProsecutionCase> prosecutionCases,
-                                             final Requester requester) {
-        try {
-            final Optional<JsonObject> responseOuCode =
-                    referenceDataService.getCourtsByPostCodeAndProsecutingAuthority(
-                            jsonEnvelope,
-                            getDefendantPostcode(listOfProsecutionCase),
-                            getProsecutionAuthorityCode(prosecutionCases),
-                            requester);
-
-            final String oucode;
-            if (responseOuCode.isPresent() && !responseOuCode.get().getJsonArray("courts").isEmpty()) {
-                final String courtHouseCode = ((JsonObject)
-                        responseOuCode.get().getJsonArray("courts").get(0)).getString("oucode");
-                oucode = courtHouseCode;
-            } else {
-                oucode = sjpReferral.getReferringJudicialDecision().getCourtHouseCode();
-            }
-            return referenceDataService.getCourtCentre(oucode, jsonEnvelope, requester);
-
-        } catch (MissingRequiredFieldException e) {
-            if (e.getMessage().contains(POSTCODE_IS_MISSING)) {
-                return referenceDataService.getCourtCentre(sjpReferral.getReferringJudicialDecision().getCourtHouseCode(), jsonEnvelope, requester);
-            } else {
-                throw e;
-            }
-        }
-    }
-
 }
